--- a/frontend/src/pages/index-page.css
+++ b/frontend/src/pages/index-page.css
@@ -32,11 +32,22 @@ button {
     color: #7b8396;
     width: 100%;
     display: flex;
-    align-items: flex-start;
+}
+
+.nextButton {
+    background-color: transparent;
+    display: flex;
+    justify-content: flex-start;
+    border-radius: 0%;
+}
+
+.nextButton:hover {
+    background-color: #7b8396;
+    color: white;
 }
 
 button:focus {
-    color: #292c31;
+    color: white;
     background-color: rgb(124, 175, 182);
 }
 
